--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,101 @@
 
     <!-- SECTION 444444 -->
     <section class="p-8 sm:p-16 lg:px-30 lg:py-20">
-   
+        <div class="self-stretch h-[823.84px] flex-col justify-start items-center gap-20 flex ">
+            <div class="flex-col justify-center items-center gap-2 flex">
+                <div class="text-center text-white text-6xl font-semibold font-Poppins leading-[90px]">Flexible pricing plans that<br/>suits with your needs</div>
+                <div class="text-center text-[#aea6a6] text-xl font-medium font-Inter leading-loose">Select plan before or start 14-day free trial to see the premium feature will end</div>
+            </div>
+
+            <!-- kotak 1 -->
+            <div class="self-stretch justify-center items-center gap-8 flex flex-col lg:flex-row">
+              <div class="flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden w-full lg:w-1/3">
+              <div class="px-8 pt-6 pb-9 bg-[#fffcfc] flex flex-col items-center gap-4">
+                <div class="bg-[#dee1e9] rounded-3xl px-6 py-4 text-black text-base font-semibold">Mini Premium</div>
+                <p class="text-center text-[#aea6a6] text-base font-medium leading-normal">Subscription plan for 1/day premium without ads but limited podcast</p>
+                <div class="text-center">
+                <span class="text-black text-6xl font-semibold">$15</span>
+                <span class="text-[#aea6a6] text-2xl font-medium">/mo</span>
+                </div>
+                <button class="w-56 h-14 rounded-3xl border border-[#dee1e9] text-[#babec8] text-[15.17px] font-semibold">Current Plan</button>
+              </div>
+              <div class="px-8 py-6 bg-[#fffcfc] flex flex-col gap-4">
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">6 Times skipping</span>
+                </div>
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">No Advertisement</span>
+                </div>
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">Free content only</span>
+                </div>
+              </div>
+              </div>
+            </div>
+
+            <!-- kotak 2 -->
+            <div class="self-stretch justify-center items-center gap-8 flex flex-col lg:flex-row">
+              <div class="flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden w-full lg:w-1/3">
+              <div class="px-8 pt-6 pb-9 bg-[#fffcfc] flex flex-col items-center gap-4">
+                <div class="bg-[#dee1e9] rounded-3xl px-6 py-4 text-black text-base font-semibold">Mini Premium</div>
+                <p class="text-center text-[#aea6a6] text-base font-medium leading-normal">Subscription plan for 1/day premium without ads but limited podcast</p>
+                <div class="text-center">
+                <span class="text-black text-6xl font-semibold">$15</span>
+                <span class="text-[#aea6a6] text-2xl font-medium">/mo</span>
+                </div>
+                <button class="w-56 h-14 rounded-3xl border border-[#dee1e9] text-[#babec8] text-[15.17px] font-semibold">Current Plan</button>
+              </div>
+              <div class="px-8 py-6 bg-[#fffcfc] flex flex-col gap-4">
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">6 Times skipping</span>
+                </div>
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">No Advertisement</span>
+                </div>
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">Free content only</span>
+                </div>
+              </div>
+              </div>
+            </div>
+
+            <!-- kotak 3 -->
+            <div class="self-stretch justify-center items-center gap-8 flex flex-col lg:flex-row">
+              <div class="flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden w-full lg:w-1/3">
+              <div class="px-8 pt-6 pb-9 bg-[#fffcfc] flex flex-col items-center gap-4">
+                <div class="bg-[#dee1e9] rounded-3xl px-6 py-4 text-black text-base font-semibold">Mini Premium</div>
+                <p class="text-center text-[#aea6a6] text-base font-medium leading-normal">Subscription plan for 1/day premium without ads but limited podcast</p>
+                <div class="text-center">
+                <span class="text-black text-6xl font-semibold">$15</span>
+                <span class="text-[#aea6a6] text-2xl font-medium">/mo</span>
+                </div>
+                <button class="w-56 h-14 rounded-3xl border border-[#dee1e9] text-[#babec8] text-[15.17px] font-semibold">Current Plan</button>
+              </div>
+              <div class="px-8 py-6 bg-[#fffcfc] flex flex-col gap-4">
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">6 Times skipping</span>
+                </div>
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">No Advertisement</span>
+                </div>
+                <div class="flex items-center gap-2">
+                <div class="w-6 h-6 bg-[#dee1e9] rounded-full"></div>
+                <span class="text-[#332d2d] text-[15.17px] font-medium">Free content only</span>
+                </div>
+              </div>
+              </div>
+            </div>
+            
+
+        </div>
     </section>
 
     <!-- SECTION 555555 -->
